Adicionando algumas funcionaldades

--- a/maze_bank/app/views/welcome/index.html.erb
+++ b/maze_bank/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Welcome#index</h1>
 <h2>Hello</p>
+<p>This is my first Rails App.</p>
+<p>...........................</p>
 <p>Find me in app/views/welcome/index.html.erb</p>
