--- a/maze_bank/app/views/articles/show.html.erb
+++ b/maze_bank/app/views/articles/show.html.erb
@@ -6,3 +6,5 @@
 	<strong>Text</strong>
 	<%= @article.text %>
 </p>	
+<p><%= link_to 'Back' , articles_path %></p>
+<p><%= link_to 'New' , new_article_path %></p>
