--- a/maze_bank/app/views/welcome/index.html.erb
+++ b/maze_bank/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Welcome#index</h1>
-<h2>Hello</p>
+<h2>Hello, Rails</h2>
 <p>This is my first Rails App.</p>
+<p><%= link_to 'My Blog' , controller: 'articles' %></p>
 <p>...........................</p>
 <p>Find me in app/views/welcome/index.html.erb</p>
